--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This thing holds a series of words that I've spewed onto the internet since 2012. It's mainly so that I have a place to learn and play with front-end development, but also to keep my Google juice up against the guy with my name that created an airplane. Seriously, there's other Dan Denneys?",
   "main": "index.js",
   "scripts": {
-    "build": "eleventy",
-    "dev": "npx @11ty/eleventy --input=. --output=_site --serve",
+    "build": "eleventy --input=src --output=_site --serve",
+    "dev": "npx @11ty/eleventy --input=src --output=_site --serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
