--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "homepage": "https://github.com/dandenney/dandenney.com-11ty#readme",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.1",
+    "html-minifier": "^4.0.0",
+    "postcss-clean": "^1.1.0",
     "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.0.2"
   },
