--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
   publish = "_site"
-  command = "eleventy --input=src --output=_site"
+  command = "eleventy --input=src --output=_site & postcss src/styles/tailwind.css --o _site/styles/style.css"
